sites/all/themes/exhibit_bootstrap/css/style.css
/**
 * This file should get overwritten if Method 1 is used. If Method 2 is chosen,
 * remove this comment and start adding your styles to this file.
 */

/* bootstrap overrides */
.navbar-default {
    background-color: #000;
    border-color: #222;
}

.navbar-brand {
    float: none;
    color: #ffbe9d;
}

.navbar-header {
    float: none;
}

.pane-menu-menu-exhibit-top-level-case-menu .nav {
    margin-top: 10px;
    margin-bottom: 10px;
    padding-top: 10px;
    padding-bottom: 10px;
    text-shadow: 0px 1px 0px #FFF;
    background-color: #F7F5FA;
    border-radius: 5px;
}

.pane-menu-menu-exhibit-top-level-case-menu .nav > li > a:hover, .nav > li > a:focus, .nav > li.active {
    text-decoration: none;
    background-color: #EEE;
}


.pane-menu-menu-exhibit-top-level-case-menu .nav a:hover, a:focus, a.active {
    color: #2A6496;
}

.pane-custom {
    border-top-style: dotted;
    border-bottom-style: dotted;
    border-top-color: #222;
    border-bottom-color: #222;
    border-top-width: 1px;
    border-bottom-width: 1px;
    padding-top: 10px;
    padding-bottom: 10px;
}

.pane-custom > h2.pane-title {
    margin-top: 0px;
    font-size: 12px;
}


/* bootstrap drupal overrides  af7461 */

.pane-subcase-view-panel-pane-1 .view-grouping-header{
    color: #215E21; /* forest green */
    color: #af7461; /* williamsburg red */
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 1.8em;
    font-weight: 500;
    line-height: 1.1;
    margin-left: 50px;
}


.pane-subcase-view-panel-pane-1 .view-grouping-content h3 {
    font-family: "Alice",serif;
    font-size: 1.4em;
    line-height: 1.8em;
    color: #222;
    margin: 20px 75px 0px 75px;
}

.pane-node-body p {
    font-family: "Alice",serif;
    font-size: 1.4em;
    line-height: 1.8em;
    color: #222;
    margin: 20px 75px 0px 75px;
}

.panel-2col .panel-col-first {
    float: left;
    width: 25%;
}

.panel-2col .panel-col-last {
    float: left;
    width: 75%;
}

.thumbnail .views-field-field-exhibit-image-one {
    text-align: center;
}

.views-field-field-exhibit-item-url {
    text-align: center;   
}

.views-field-field-exhibit-item-url > .field-content > div {
    text-align: left;
    font-size: smaller;
    margin-top: 10px;
}

.thumbnail .views-field-field-exhibit-image-one-caption {
    font-size: smaller;
}

.thumbnail {
    margin:20px;
    border: 1px solid #184618;
    background-color: #DDD;
}

.rbsc-historic-map {
    font-size: smaller;
}

.views-responsive-grid-horizontal {
    background-color: #215E21; /* forest green */
    border: 2px solid #123412;
    border-radius: 6px;
    transition: all 0.2s ease-in-out 0s;
    padding: 10px;
    margin: 20px 75px 40px 75px;

    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #215E21), color-stop(100%, #184618));
    background: -webkit-linear-gradient(top, #215E21, #184618);
    background: -o-linear-gradient(top, #215E21, #184618);
    background: -moz-linear-gradient(top, #215E21, #184618);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#215E21', endColorstr='#184618', GradientType=0);


    border-top-color: #123412;
    border-left-color: #123412;
    border-right-color: #184618;
    border-bottom-color: #184618;



}


.views-field-field-exhibit-image-two {
  display: none;
}

.view-exhibit-item-views .views-field-field-exhibit-image-two {
  display: inline;
}


.view-id-subcase_view .views-row {
    padding-left: 20px;
    padding-right: 20px;
}

/* new classes */
.menu-button {
    margin-bottom: 10px;    
}

.name {
    display: block;
    text-align: left;
    font-family: "Goudy Bookletter 1911",serif;
    font-weight: 500;
    line-height: 1.1;
    color: #ffbe9d !important;
    font-size: 42px;
    display: block;
    text-transform: uppercase;
    letter-spacing: 1px;
}

.lead {
    display: block;
    text-align: left;
    font-family: "Goudy Bookletter 1911",serif;
    font-weight: 500;
    line-height: 1.1;
    color: inherit;
    font-size: 24px;
    display: block;
    font-style: italic;
    letter-spacing: 1px;
    color: #fff;
    margin-bottom: 10px !important;
}

.title-group {
        margin-left: 140px;
}


@media(max-width:768px){

    .title-group {
        margin-left: 0;
    }
    .lead, .name {
	text-align: center;
    }
       
    #navbar {
        margin-top: -10px;   
    }
       
    .logo {
        float:none !important;     
    }
    
    .navbar-header {
        text-align: center;
        padding: 10px;
    }
       
    .pane-node-body p {
        font-family: "Alice",serif;
        font-size: 1.4em;
        line-height: 1.8em;
        color: #222;
        margin: 20px 10px 0px 10px;
    }
    
    .pane-subcase-view-panel-pane-1 .view-grouping-content h3 {
        font-family: "Alice",serif;
        font-size: 1.4em;
        line-height: 1.8em;
        color: #222;
        margin: 20px 10px 0px 10px;
    }
    
    .pane-subcase-view-panel-pane-1 .view-grouping-header{
        color: #215E21; /* forest green */
        color: #af7461; /* williamsburg red */
        font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
        font-size: 1.8em;
        font-weight: 500;
        line-height: 1.1;
        margin-left: 10px;
    }
    
    .views-responsive-grid-horizontal {
        background-color: #215E21; /* forest green */
        border: 2px solid #123412;
        border-radius: 6px;
        transition: all 0.2s ease-in-out 0s;
        padding: 10px;
        margin: 20px 10px 40px 10px;
    
        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #215E21), color-stop(100%, #184618));
        background: -webkit-linear-gradient(top, #215E21, #184618);
        background: -o-linear-gradient(top, #215E21, #184618);
        background: -moz-linear-gradient(top, #215E21, #184618);
        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#215E21', endColorstr='#184618', GradientType=0);
    
    
        border-top-color: #123412;
        border-left-color: #123412;
        border-right-color: #184618;
        border-bottom-color: #184618;
    
    }
        
}

